--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-export PRIVATE_KEY=
+#private key taken from deploy.py file
+export PRIVATE_KEY=0x5JYJWrRd7sbqEzL9KR9dYTGrxyLqZEhPtnCtcvhC5t8ZvWgS9iC
 export SOME_OTHER_VAR=7
